--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-icons": "^5.3.0",
     "react-linear-gradient-picker": "^3.0.1",
     "react-moment": "^1.1.3",
+    "react-multi-date-picker": "^4.5.2",
     "react-multiselect-dropdown-bootstrap": "^1.1.0",
     "react-nestable": "^3.0.2",
     "react-range-slider-input": "^3.0.7",
@@ -50,10 +51,11 @@
     "recharts": "^2.12.5",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
-    "rsuite": "^5.59.1",
+    "rsuite": "^5.74.2",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.10.7",
     "swiper": "^11.0.5",
+    "uninstall": "^0.0.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
