--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@loadable/component": "^5.16.3",
     "@n8tb1t/use-scroll-position": "^2.0.3",
     "@phosphor-icons/react": "^2.1.7",
+    "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.6.8",
     "formik": "^2.4.5",
     "lightgallery": "^2.7.2",
@@ -42,6 +43,7 @@
     "react-multiselect-dropdown-bootstrap": "^1.1.0",
     "react-nestable": "^3.0.2",
     "react-range-slider-input": "^3.0.7",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.22.3",
     "react-select": "^5.8.0",
     "react-sparklines": "^1.7.0",
